theme edit check

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
-baseurl: "/zolan" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-
+baseurl: '/about' # the subpath of your site, e.g. /blog
+url: 'https://nietzche15.github.io/' # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
 markdown: kramdown
@@ -11,8 +10,7 @@ plugins:
   - jekyll/tagging
 
 paginate: 5
-paginate_path: "/page/:num"
-
+paginate_path: '/page/:num'
 
 # Pages Path
 defaults:
@@ -24,11 +22,10 @@ defaults:
 include:
   - _pages
 
-
 # Tags
-tag_page_dir:         tag
-tag_page_layout:      tag_page
-tag_permalink_style:  pretty
+tag_page_dir: tag
+tag_page_layout: tag_page
+tag_permalink_style: pretty
 
 sass:
   sass_dir: _sass
