--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -37,3 +37,10 @@ google-analytics: # Add your identifier. For example UA-99631805-1.
 #-------------------------------
 # Newsletter
 mailchimp: # Add your MailChimp form identifier. For example - blogenjoyfreedom.us16.list-manage.com/subscribe/post?u=cd56155d76ddeeb4c0bc4d080&amp;id=7a526cd13e
+
+#-------------------------------
+# AboutMe Contents
+aboutme:
+  title01: Certificates
+  01sub01: TOEIC 950 [ 2022.08 ]
+  01sub02: SQLD [ 2023.04 ]
